syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="AddBankCard";
//Generated By BrewRobot:Wed Jan 31 15:10:06 CST 2018

message PBIFE_bankcardmanage_addBankCard{
	///ife/bankcardmanage/addBankCard.html

	string asynchronous = 1; //,是否异步,String,不校验,是,

	string serialNo = 2; //,流水号,String,不校验,是,


}

message Ret_PBIFE_bankcardmanage_addBankCard{
	///ife/bankcardmanage/addBankCard.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_bankcardmanage_addBankCard data=3;


}

message REQ_PBIFE_bankcardmanage_addBankCard{
	///ife/bankcardmanage/addBankCard.html

	string realName = 1; //,真实姓名,String,不校验,否,未曾签约需要上送

	string certificateCode = 2; //,证件号,String,不校验,否,未曾签约需要上送

	string certificateType = 3; //,证件类型,String,不校验,否,

	string payChannelNo = 4; //,支付渠道,String,不校验,否,

	string bankCardNo = 5; //,银行卡号,String,不校验,否,

	string bankCode = 6; //,银行编号,String,不校验,否,

	string bankName = 7; //,银行名,String,不校验,否,

	string checkCode = 8; //,验证码,String,不校验,否,

	string checkCodeSerialNo = 9; //,验证码流水,String,不校验,否,

	string terminal = 10; //,操作终端,String,不校验,否,

	string checkCodeUniqueNo = 11; //,浦发短信验证码唯一编号,String,不校验,否,

	string certificateAddress = 12; //,身份证地址,String,不校验,否,

	string nation = 13; //,民族,String,不校验,否,


}